--- a/conf/application.conf
+++ b/conf/application.conf
@@ -110,44 +110,70 @@ metrics {
     enabled = true
 }
 
+# The context which the API will have via the API Platform http://API_GATEWAY/{api.gateway.context}/
+api.gateway.context = "vat-api"
+
+# The status of the API for the API Platform.
+api.status = "PROTOTYPED"
 
 # Microservice specific config
 
-auditing {
-    enabled=true
-    traceRequests=true
-    consumer {
-        baseUri {
-            host = localhost
-            port = 8100
-        }
-    }
-}
+Dev {
 
-
-mongodb {
-    uri = "mongodb://localhost:27017/vat-api"
-}
-
-
-microservice {
-    metrics {
-        graphite {
-            host = graphite
-            port = 2003
-            prefix = play.${appName}.
-            enabled = false
+    auditing {
+        enabled = true
+        traceRequests = false
+        consumer {
+            baseUri {
+                host = localhost
+                port = 8100
+            }
         }
     }
 
-    services {
 
-        auth {
-            host=localhost
-            port=8500
+    mongodb {
+        uri = "mongodb://localhost:27017/vat-api"
+    }
+
+
+    microservice {
+        metrics {
+            graphite {
+                host = graphite
+                port = 2003
+                prefix = play.${appName}.
+                enabled = false
+            }
+        }
+
+        services {
+
+            auth {
+                host = localhost
+                port = 8500
+            }
+
+            datastream {
+                host = localhost
+                port = 8100
+                enabled = false
+            }
+
+            service-locator {
+                host = localhost
+                port = 9602
+                enabled = false
+            }
+
+            des {
+                host = localhost
+                port = 9668
+                env = none
+                token = secret
+            }
         }
 
     }
+
 }
-
-
