[RA] - Change the api-context to vat. Add repository.yaml for catalogue to pick up digital service

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -111,7 +111,7 @@ metrics {
 }
 
 # The context which the API will have via the API Platform http://API_GATEWAY/{api.gateway.context}/
-api.gateway.context = "vat-api"
+api.gateway.context = "vat"
 
 # The status of the API for the API Platform.
 api.status = "PROTOTYPED"
