--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,8 +1,23 @@
+# Copyright 2017 HM Revenue & Customs
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
 
 # This is the main configuration file for the application.
 # ~~~~~
 
 appName=vat-api
+
+appUrl = "http://vat-api.service"
 
 # Play Modules
 # ~~~~
@@ -42,7 +57,7 @@ application.langs="en"
 # ~~~~~
 # Define the Global object class for this application.
 # Default to Global in the root package.
-application.global=uk.gov.hmrc.vatapi.MicroserviceGlobal
+application.global=uk.gov.hmrc.vatapi.config.MicroserviceGlobal
 
 # Router
 # ~~~~~
@@ -74,10 +89,18 @@ controllers {
     }
 
   uk.gov.hmrc.vatapi.controllers.MicroserviceHelloWorld = {
+      needsHeaderValidation = false
       needsAuth = false
       needsLogging = false
       needsAuditing = false
     }
+
+uk.gov.hmrc.vatapi.controllers.definition.DocumentationController = {
+    needsHeaderValidation = false
+    needsLogging = false
+    needsAuditing = false
+    needsTaxYear = false
+}
 
 }
 
@@ -100,6 +123,14 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+
+wiremock-port = 22222
+wiremock-port = ${?WIREMOCK_PORT}
+
+mongo-test-uri = "mongodb://localhost:12345/vat-api"
+mongo-test-uri = ${?MONGO_TEST_URI}
+
+
 # Metrics plugin settings - graphite reporting is configured on a per env basis
 metrics {
     name = ${appName}
@@ -116,13 +147,27 @@ api.gateway.context = "vat"
 # The status of the API for the API Platform.
 api.status = "PROTOTYPED"
 
+
 # Microservice specific config
+
+auditing {
+    enabled=true
+    traceRequests=true
+    consumer {
+        baseUri {
+            host = localhost
+            port = 8100
+        }
+    }
+}
+
 
 Dev {
 
     auditing {
         enabled = true
         traceRequests = false
+
         consumer {
             baseUri {
                 host = localhost
@@ -131,11 +176,9 @@ Dev {
         }
     }
 
-
     mongodb {
         uri = "mongodb://localhost:27017/vat-api"
     }
-
 
     microservice {
         metrics {
@@ -152,6 +195,7 @@ Dev {
             auth {
                 host = localhost
                 port = 8500
+                enabled = true
             }
 
             datastream {
@@ -173,7 +217,75 @@ Dev {
                 token = secret
             }
         }
-
     }
 
+    feature-switch {
+        white-list {
+            enabled = false
+            applicationIds = []
+        }
+
+        test-scenario-simulation {
+            enabled = true
+        }
+    }
+}
+
+Test {
+    auditing {
+        enabled = true
+        traceRequests = false
+        consumer {
+            baseUri {
+                host = localhost
+                port = ${wiremock-port}
+            }
+        }
+    }
+
+
+    mongodb {
+        uri = ${mongo-test-uri}
+    }
+
+    microservice {
+        services {
+
+            datastream {
+                host = "localhost"
+                port = ${wiremock-port}
+                enabled = false
+            }
+
+            auth {
+                host = "localhost"
+                port = ${wiremock-port}
+                enabled = false
+            }
+
+            service-locator {
+                host = "localhost"
+                port = ${wiremock-port}
+                enabled = false
+            }
+
+            des {
+                host = "localhost"
+                port = ${wiremock-port}
+                env = ""
+                token = ""
+            }
+        }
+    }
+
+    feature-switch {
+        white-list {
+            enabled = false
+            applicationIds = []
+        }
+
+        test-scenario-simulation {
+            enabled = true
+        }
+    }
 }
