[MTDSA-1171] [CK] VAT obligations RAML, schema, examples, work in progress

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -100,13 +100,12 @@ controllers {
     needsLogging = false
     needsAuditing = false
     needsTaxYear = false
-needsAuth = false}
+    needsAuth = false
+  }
 
   uk.gov.hmrc.vatapi.resources.ObligationsResource = {
-    needsHeaderValidation = false
-    needsLogging = false
-    needsAuditing = false
-    needsTaxYear = false
+    needsLogging = true
+    needsAuditing = true
     needsAuth = false
   }
 
