[MTDSA-1222][RG] Great library upgrade
Updated HMRC microservice libraries. Includes various minor fixes for
API changes (package renames, interface changes, etc.).

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -100,6 +100,7 @@ uk.gov.hmrc.vatapi.controllers.definition.DocumentationController = {
     needsLogging = false
     needsAuditing = false
     needsTaxYear = false
+    needsAuth = false
 }
 
 }
