[RA] - Add auditing config which was removed in previous commit

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -137,6 +137,18 @@ api.status = "PROTOTYPED"
 
 
 # Microservice specific config
+
+auditing {
+  enabled = true
+  traceRequests = true
+  consumer {
+    baseUri {
+      host = localhost
+      port = 8100
+    }
+  }
+}
+
 Dev {
 
   auditing {
