[RA] - Disable service-locator locally

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -194,7 +194,7 @@ Dev {
       service-locator {
         host = localhost
         port = 9602
-        enabled = true
+        enabled = false
       }
 
       des {
