[MTDSA-1171] [CK] Add config to pass the Gov-Test-Scenario headera and update the version to 1.0

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -135,6 +135,8 @@ api.gateway.context = "vat"
 # The status of the API for the API Platform.
 api.status = "PROTOTYPED"
 
+# Custom header whitelisting
+httpHeadersWhitelist = ["Gov-Test-Scenario"]
 
 # Microservice specific config
 
