[MTDSA-1158] Add submit 9-box return endpoint

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -109,6 +109,12 @@ controllers {
     needsAuth = false
   }
 
+  uk.gov.hmrc.vatapi.resources.VatReturnsResource = {
+    needsLogging = true
+    needsAuditing = true
+    needsAuth = false
+  }
+
 }
 
 
