--- a/conf/application.conf
+++ b/conf/application.conf
@@ -115,6 +115,12 @@ controllers {
     needsAuth = false
   }
 
+  uk.gov.hmrc.vatapi.resources.FinancialDataResource = {
+    needsLogging = true
+    needsAuditing = false
+    needsAuth = false
+  }
+
 }
 
 
@@ -224,6 +230,8 @@ Dev {
       enabled = true
     }
   }
+
+  mtd-date = "2016-04-06"
 }
 
 Test {
@@ -283,4 +291,6 @@ Test {
       enabled = true
     }
   }
+
+  mtd-date = "2016-04-06"
 }
