MTDSA-1342 Align vat-api to new API Platform statuses

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -139,7 +139,7 @@ metrics {
 api.gateway.context = "vat"
 
 # The status of the API for the API Platform.
-api.status = "PROTOTYPED"
+api.status = "ALPHA"
 
 # Custom header whitelisting
 httpHeadersWhitelist = ["Gov-Test-Scenario"]
