MTDSA-1411 Add VAT organisation Auth logic

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -229,6 +229,10 @@ Dev {
     test-scenario-simulation {
       enabled = true
     }
+
+    auth {
+      enabled = false
+    }
   }
 
   mtd-date = "2016-04-06"
@@ -288,6 +292,10 @@ Test {
     }
 
     test-scenario-simulation {
+      enabled = true
+    }
+
+    auth {
       enabled = true
     }
   }
