--- a/conf/application.conf
+++ b/conf/application.conf
@@ -165,6 +165,10 @@ auditing {
 
 Dev {
 
+  access-keys {
+    xApiKey: "dummy-api-key"
+  }
+
   auditing {
     enabled = true
     traceRequests = false
@@ -217,6 +221,11 @@ Dev {
         env = none
         token = secret
       }
+
+      non-repudiation {
+        host = localhost
+        port = 9669
+      }
     }
   }
 
@@ -235,6 +244,11 @@ Dev {
 }
 
 Test {
+
+  access-keys {
+    xApiKey: "dummy-api-key"
+  }
+
   auditing {
     enabled = true
     traceRequests = false
@@ -277,6 +291,10 @@ Test {
         port = ${wiremock-port}
         env = ""
         token = ""
+      }
+      non-repudiation {
+        host = "localhost"
+        port = ${wiremock-port}
       }
     }
   }
