MTDSA-1411 Add VAT organisation Auth logic

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -150,6 +150,11 @@ api.status = "ALPHA"
 # Custom header whitelisting
 httpHeadersWhitelist = ["Gov-Test-Scenario"]
 
+# vat authorisation enrolment conf
+enrolmentToken=HMRC-MTD-VAT
+identifier=VRN
+auth-rule=mtd-vat-auth
+
 # Microservice specific config
 
 auditing {
@@ -238,6 +243,10 @@ Dev {
     test-scenario-simulation {
       enabled = true
     }
+
+    auth {
+      enabled = false
+    }
   }
 
   mtd-date = "2016-04-06"
@@ -306,6 +315,10 @@ Test {
     }
 
     test-scenario-simulation {
+      enabled = true
+    }
+
+    auth {
       enabled = true
     }
   }
