Adding confidenceLevel to auth check

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -150,11 +150,6 @@ api.status = "ALPHA"
 # Custom header whitelisting
 httpHeadersWhitelist = ["Gov-Test-Scenario"]
 
-# vat authorisation enrolment conf
-enrolmentToken=HMRC-MTD-VAT
-identifier=VRN
-auth-rule=mtd-vat-auth
-
 # Microservice specific config
 
 auditing {
@@ -169,6 +164,12 @@ auditing {
 }
 
 Dev {
+
+  enrolments {
+    key: "HMRC-MTD-VAT"
+    identifier: "VRN"
+    authRule: "mtd-vat-auth"
+  }
 
   access-keys {
     xApiKey: "dummy-api-key"
@@ -253,6 +254,12 @@ Dev {
 }
 
 Test {
+
+  enrolments {
+    key: "HMRC-MTD-VAT"
+    identifier: "VRN"
+    authRule: "mtd-vat-auth"
+  }
 
   access-keys {
     xApiKey: "dummy-api-key"
