Agent simulator conf name changes

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -241,7 +241,7 @@ Dev {
       applicationIds = []
     }
 
-    test-scenario-simulation {
+    client-agent-simulation {
       enabled = true
     }
 
@@ -321,7 +321,7 @@ Test {
       applicationIds = []
     }
 
-    test-scenario-simulation {
+    client-agent-simulation {
       enabled = true
     }
 
