MTDSA-1411: Add real VAT organisation authorisation functionality

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -165,6 +165,12 @@ auditing {
 
 Dev {
 
+  enrolments {
+    key: "HMRC-MTD-VAT"
+    identifier: "VRN"
+    authRule: "mtd-vat-auth"
+  }
+
   access-keys {
     xApiKey: "dummy-api-key"
   }
@@ -235,7 +241,11 @@ Dev {
       applicationIds = []
     }
 
-    test-scenario-simulation {
+    client-agent-simulation {
+      enabled = true
+    }
+
+    auth {
       enabled = true
     }
   }
@@ -244,6 +254,12 @@ Dev {
 }
 
 Test {
+
+  enrolments {
+    key: "HMRC-MTD-VAT"
+    identifier: "VRN"
+    authRule: "mtd-vat-auth"
+  }
 
   access-keys {
     xApiKey: "dummy-api-key"
@@ -305,7 +321,11 @@ Test {
       applicationIds = []
     }
 
-    test-scenario-simulation {
+    client-agent-simulation {
+      enabled = true
+    }
+
+    auth {
       enabled = true
     }
   }
