--- a/conf/application.conf
+++ b/conf/application.conf
@@ -142,7 +142,7 @@ metrics {
 }
 
 # The context which the API will have via the API Platform http://API_GATEWAY/{api.gateway.context}/
-api.gateway.context = "vat"
+api.gateway.context = "organisations/vat"
 
 # The status of the API for the API Platform.
 api.status = "ALPHA"
