--- a/conf/application.conf
+++ b/conf/application.conf
@@ -24,7 +24,7 @@ appUrl = "http://vat-api.service"
 # Additional play modules can be added here
 play.modules.enabled += "com.kenshoo.play.metrics.PlayModule"
 
-# Global request handlere
+# Global request handler
 # ~~~~
 # Set to the object handler for migrated 2.3 services
 play.http.requestHandler = "play.api.http.GlobalSettingsHttpRequestHandler"
