Added feature switch capability to config

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -240,6 +240,10 @@ Dev {
     auth {
       enabled = true
     }
+
+    des {
+      hybrid = false
+    }
   }
 
   mtd-date = "2016-04-06"
@@ -315,6 +319,10 @@ Test {
 
     auth {
       enabled = true
+    }
+
+    des {
+      hybrid = false
     }
   }
 
