Added new RAML 2.0 package

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -141,8 +141,14 @@ metrics {
 api.gateway.context = "organisations/vat"
 
 # The status of the API for the API Platform.
-api.status = "ALPHA"
-
+api {
+  1.0 {
+    status = "BETA"
+  }
+  2.0 {
+    status = "ALPHA"
+  }
+}
 # Custom header whitelisting
 httpHeadersWhitelist = ["Gov-Test-Scenario"]
 
