--- a/conf/application.conf
+++ b/conf/application.conf
@@ -22,12 +22,12 @@ appUrl = "http://vat-api.service"
 # Play Modules
 # ~~~~
 # Additional play modules can be added here
-play.modules.enabled += "com.kenshoo.play.metrics.PlayModule"
+//play.modules.enabled += "com.kenshoo.play.metrics.PlayModule"
 
 # Global request handler
 # ~~~~
 # Set to the object handler for migrated 2.3 services
-play.http.requestHandler = "play.api.http.GlobalSettingsHttpRequestHandler"
+//play.http.requestHandler = "play.api.http.GlobalSettingsHttpRequestHandler"
 
 # Session Timeout
 # ~~~~
@@ -56,7 +56,8 @@ application.langs = "en"
 # ~~~~~
 # Define the Global object class for this application.
 # Default to Global in the root package.
-application.global = uk.gov.hmrc.vatapi.config.MicroserviceGlobal
+// TODO REMOVE AS NOT USED ANYMORE
+//application.global = uk.gov.hmrc.vatapi.config.MicroserviceGlobal
 
 # Router
 # ~~~~~
@@ -69,6 +70,7 @@ application.global = uk.gov.hmrc.vatapi.config.MicroserviceGlobal
 # Default to Routes in the root package (and conf/routes)
 # !!!WARNING!!! DO NOT CHANGE THIS ROUTER
 application.router = prod.Routes
+play.http.router = prod.Routes
 
 
 # Controller
@@ -331,3 +333,29 @@ Test {
 
   mtd-date = "2016-04-06"
 }
+
+
+
+include "backend.conf"
+
+# An ApplicationLoader that uses Guice to bootstrap the application.
+play.application.loader = "uk.gov.hmrc.play.bootstrap.ApplicationLoader"
+
+# Primary entry point for all HTTP requests on Play applications
+play.http.requestHandler = "uk.gov.hmrc.play.bootstrap.http.RequestHandler"
+
+# Provides an implementation of AuditConnector. Use `uk.gov.hmrc.play.bootstrap.AuditModule` or create your own.
+# An audit connector must be provided.
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuditModule"
+
+# Provides an implementation of MetricsFilter. Use `uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModule` or create your own.
+# A metric filter must be provided
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModule"
+
+# Provides an implementation and configures all filters required by a Platform backend microservice.
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.MicroserviceModule"
+
+//play.http.filters = "uk.gov.hmrc.play.bootstrap.filters.MicroserviceFilters"
+play.http.filters=uk.gov.hmrc.vatapi.filters.VatApiFilters
+play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.http.JsonErrorHandler"
+play.modules.enabled += "uk.gov.hmrc.vatapi.config.Module"
