Code working against acceptance tests

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -357,5 +357,5 @@ play.modules.enabled += "uk.gov.hmrc.play.bootstrap.MicroserviceModule"
 
 //play.http.filters = "uk.gov.hmrc.play.bootstrap.filters.MicroserviceFilters"
 play.http.filters=uk.gov.hmrc.vatapi.filters.VatApiFilters
-play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.http.JsonErrorHandler"
+play.http.errorHandler = "uk.gov.hmrc.vatapi.utils.ErrorHandler"
 play.modules.enabled += "uk.gov.hmrc.vatapi.config.Module"
