Removed global wiring

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -56,8 +56,6 @@ application.langs = "en"
 # ~~~~~
 # Define the Global object class for this application.
 # Default to Global in the root package.
-// TODO REMOVE AS NOT USED ANYMORE
-//application.global = uk.gov.hmrc.vatapi.config.MicroserviceGlobal
 
 # Router
 # ~~~~~
@@ -69,7 +67,7 @@ application.langs = "en"
 # you may need to define a router file `conf/my.application.routes`.
 # Default to Routes in the root package (and conf/routes)
 # !!!WARNING!!! DO NOT CHANGE THIS ROUTER
-application.router = prod.Routes
+//application.router = prod.Routes
 play.http.router = prod.Routes
 
 
