Remove unused and commented out code

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -18,16 +18,7 @@
 appName = vat-api
 
 appUrl = "http://vat-api.service"
-
-# Play Modules
-# ~~~~
-# Additional play modules can be added here
-//play.modules.enabled += "com.kenshoo.play.metrics.PlayModule"
-
-# Global request handler
-# ~~~~
-# Set to the object handler for migrated 2.3 services
-//play.http.requestHandler = "play.api.http.GlobalSettingsHttpRequestHandler"
+mtd-date = "2016-04-06"
 
 # Session Timeout
 # ~~~~
@@ -67,7 +58,6 @@ application.langs = "en"
 # you may need to define a router file `conf/my.application.routes`.
 # Default to Routes in the root package (and conf/routes)
 # !!!WARNING!!! DO NOT CHANGE THIS ROUTER
-//application.router = prod.Routes
 play.http.router = prod.Routes
 
 
@@ -330,7 +320,6 @@ Test {
 
 }
 
-mtd-date = "2016-04-06"
 
 include "backend.conf"
 
@@ -351,7 +340,9 @@ play.modules.enabled += "uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModu
 # Provides an implementation and configures all filters required by a Platform backend microservice.
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.MicroserviceModule"
 
-//play.http.filters = "uk.gov.hmrc.play.bootstrap.filters.MicroserviceFilters"
-play.http.filters=uk.gov.hmrc.vatapi.filters.VatApiFilters
-play.http.errorHandler = "uk.gov.hmrc.vatapi.utils.ErrorHandler"
+# VAT-API specific modules
 play.modules.enabled += "uk.gov.hmrc.vatapi.config.Module"
+
+play.http.filters=uk.gov.hmrc.vatapi.filters.VatApiFilters
+
+play.http.errorHandler = "uk.gov.hmrc.vatapi.utils.ErrorHandler"
