MTDSA-2963 - Updated build dependencies and application config for health routes

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -77,7 +77,7 @@ controllers {
     needsAuditing = false
   }
 
-  uk.gov.hmrc.play.health.AdminController = {
+  uk.gov.hmrc.play.health.HealthController  = {
     needsHeaderValidation = false
     needsLogging = false
     needsAuditing = false
