[MTDAS-3323] add NRS timeout to configuration

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -216,6 +216,7 @@ Dev {
       non-repudiation {
         host = localhost
         port = 9768
+        maxTimeout = 5000
       }
     }
   }
@@ -295,6 +296,7 @@ Test {
       non-repudiation {
         host = "localhost"
         port = ${wiremock-port}
+        maxTimeout = 5000
       }
     }
   }
