Removed header check for documentaion

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -60,6 +60,40 @@ application.langs = "en"
 # !!!WARNING!!! DO NOT CHANGE THIS ROUTER
 play.http.router = prod.Routes
 
+
+# Controller
+# ~~~~~
+# By default all controllers will have authorisation, logging and
+# auditing (transaction monitoring) enabled.
+# The below controllers are the default exceptions to this rule.
+
+controllers {
+  # 300 is the default, you may need to change this according to your needs
+  confidenceLevel = 300
+
+  com.kenshoo.play.metrics.MetricsController = {
+    needsAuth = false
+    needsLogging = false
+    needsAuditing = false
+  }
+
+  uk.gov.hmrc.play.health.HealthController  = {
+    needsHeaderValidation = false
+    needsLogging = false
+    needsAuditing = false
+    needsTaxYear = false
+  }
+
+  uk.gov.hmrc.vatapi.controllers.definition.DocumentationController = {
+    needsHeaderValidation = false
+    needsLogging = false
+    needsAuditing = false
+    needsTaxYear = false
+    needsAuth = false
+  }
+}
+
+
 wiremock-port = 22222
 wiremock-port = ${?WIREMOCK_PORT}
 
