[MTDSA-4535] allow client ID header to be passed.  Add to audit events

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -118,7 +118,8 @@ api {
   }
 }
 # Custom header whitelisting
-httpHeadersWhitelist = ["Gov-Test-Scenario"]
+httpHeadersWhitelist = ["Gov-Test-Scenario", "Accept", "X-Client-Id"]
+internalServiceHostPatterns = [ "localhost" ]
 
 # Microservice specific config
 
