--- a/conf/application.conf
+++ b/conf/application.conf
@@ -41,7 +41,7 @@ application.session.secure = false
 
 # The application languages
 # ~~~~~
-application.langs = "en"
+play.i18n.langs = ["en"]
 
 # Global object class
 # ~~~~~
