[MTDSA-4999] add top level packages

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -60,7 +60,6 @@ play.i18n.langs = ["en"]
 # !!!WARNING!!! DO NOT CHANGE THIS ROUTER
 play.http.router = prod.Routes
 
-
 # Controller
 # ~~~~~
 # By default all controllers will have authorisation, logging and
@@ -108,15 +107,17 @@ metrics {
   enabled = true
 }
 
-# The context which the API will have via the API Platform http://API_GATEWAY/{api.gateway.context}/
-api.gateway.context = "organisations/vat"
-
-# The status of the API for the API Platform.
+# Api related config
 api {
   1.0 {
+    # The status of the API for the API Platform.
     status = "BETA"
+    endpoints.enabled = true
   }
+  # The context which the API will have via the API Platform http://API_GATEWAY/{api.gateway.context}/
+  gateway.context = "organisations/vat"
 }
+
 # Custom header whitelisting
 httpHeadersWhitelist = ["Gov-Test-Scenario", "Accept", "X-Client-Id"]
 internalServiceHostPatterns = [ "localhost" ]
