[MTDSA-4999] add request handler

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -14,6 +14,7 @@
 
 # This is the main configuration file for the application.
 # ~~~~~
+include "backend.conf"
 
 appName = vat-api
 
@@ -43,59 +44,29 @@ application.session.secure = false
 # ~~~~~
 play.i18n.langs = ["en"]
 
-# Global object class
-# ~~~~~
-# Define the Global object class for this application.
-# Default to Global in the root package.
-
-# Router
-# ~~~~~
-# Define the Router object to use for this application.
-# This router will be looked up first when the application is starting up,
-# so make sure this is the entry point.
-# Furthermore, it's assumed your route file is named properly.
-# So for an application router like `my.application.Router`,
-# you may need to define a router file `conf/my.application.routes`.
-# Default to Routes in the root package (and conf/routes)
-# !!!WARNING!!! DO NOT CHANGE THIS ROUTER
 play.http.router = prod.Routes
 
-# Controller
-# ~~~~~
-# By default all controllers will have authorisation, logging and
-# auditing (transaction monitoring) enabled.
-# The below controllers are the default exceptions to this rule.
+play.application.loader = "uk.gov.hmrc.play.bootstrap.ApplicationLoader"
 
-controllers {
-  # 300 is the default, you may need to change this according to your needs
-  confidenceLevel = 300
+play.http.requestHandler = "routing.VersionRoutingRequestHandler"
 
-  com.kenshoo.play.metrics.MetricsController = {
-    needsAuth = false
-    needsLogging = false
-    needsAuditing = false
-  }
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuditModule"
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModule"
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.MicroserviceModule"
 
-  uk.gov.hmrc.play.health.HealthController  = {
-    needsHeaderValidation = false
-    needsLogging = false
-    needsAuditing = false
-    needsTaxYear = false
-  }
+play.http.filters=uk.gov.hmrc.vatapi.filters.VatApiFilters
 
-  uk.gov.hmrc.vatapi.controllers.definition.DocumentationController = {
-    needsHeaderValidation = false
-    needsLogging = false
-    needsAuditing = false
-    needsTaxYear = false
-    needsAuth = false
-  }
-}
+#Cant use `utils.ErrorHandler` until the VAT API is re-spec'ed to remove default Play! errors
+play.http.errorHandler = "uk.gov.hmrc.vatapi.utils.ErrorHandler"
+
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuthModule"
+play.modules.enabled += "config.DIModule"
+
 
 
 wiremock-port = 22222
 wiremock-port = ${?WIREMOCK_PORT}
-
 
 # Metrics plugin settings - graphite reporting is configured on a per env basis
 metrics {
@@ -104,7 +75,18 @@ metrics {
   durationUnit = SECONDS
   showSamples = true
   jvm = true
+  enabled = false
+}
+
+auditing {
   enabled = true
+  traceRequests = true
+  consumer {
+    baseUri {
+      host = localhost
+      port = 8100
+    }
+  }
 }
 
 # Api related config
@@ -124,18 +106,6 @@ internalServiceHostPatterns = [ "localhost" ]
 
 # Microservice specific config
 
-auditing {
-  enabled = true
-  traceRequests = true
-  consumer {
-    baseUri {
-      host = localhost
-      port = 8100
-    }
-  }
-}
-
-
 enrolments {
   key: "HMRC-MTD-VAT"
   identifier: "VRN"
@@ -147,7 +117,7 @@ access-keys {
 }
 
 auditing {
-  enabled = true
+  enabled = false
   traceRequests = false
 
   consumer {
@@ -204,6 +174,12 @@ microservice {
 }
 
 feature-switch {
+
+  #Specifies which versions of the API to allow through the VersionRoutingRequestHandler
+  version-1 {
+    enabled = true
+  }
+
   white-list {
     enabled = false
     applicationIds = []
@@ -224,34 +200,44 @@ feature-switch {
   submit-with-originatorId {
     enabled = true
   }
+
+  #Switch between refactored packages or legacy packages
+  refactor {
+    enabled = false
+  }
 }
 
+controllers {
+  # 300 is the default, you may need to change this according to your needs
+  confidenceLevel = 300
 
-include "backend.conf"
+  com.kenshoo.play.metrics.MetricsController = {
+    needsAuth = false
+    needsLogging = false
+    needsAuditing = false
+  }
 
-# An ApplicationLoader that uses Guice to bootstrap the application.
-play.application.loader = "uk.gov.hmrc.play.bootstrap.ApplicationLoader"
+  uk.gov.hmrc.play.health.HealthController  = {
+    needsHeaderValidation = false
+    needsLogging = false
+    needsAuditing = false
+    needsTaxYear = false
+  }
 
-# Primary entry point for all HTTP requests on Play applications
-play.http.requestHandler = "uk.gov.hmrc.play.bootstrap.http.RequestHandler"
+  uk.gov.hmrc.vatapi.controllers.definition.DocumentationController = {
+    needsHeaderValidation = false
+    needsLogging = false
+    needsAuditing = false
+    needsTaxYear = false
+    needsAuth = false
+  }
 
-# Provides an implementation of AuditConnector. Use `uk.gov.hmrc.play.bootstrap.AuditModule` or create your own.
-# An audit connector must be provided.
-play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuditModule"
-
-# Provides an implementation of MetricsFilter. Use `uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModule` or create your own.
-# A metric filter must be provided
-play.modules.enabled += "uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModule"
-
-# Provides an implementation and configures all filters required by a Platform backend microservice.
-play.modules.enabled += "uk.gov.hmrc.play.bootstrap.MicroserviceModule"
-
-play.http.filters=uk.gov.hmrc.vatapi.filters.VatApiFilters
-
-play.http.errorHandler = "uk.gov.hmrc.vatapi.utils.ErrorHandler"
-# Play Modules
-# ~~~~
-# Additional play modules can be added here
-play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
-play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuthModule"
+  config.DocumentationController = {
+    needsHeaderValidation = false
+    needsLogging = false
+    needsAuditing = false
+    needsTaxYear = false
+    needsAuth = false
+  }
+}
 
