--- a/conf/application.conf
+++ b/conf/application.conf
@@ -203,7 +203,7 @@ feature-switch {
 
   #Switch between refactored packages or legacy packages
   refactor {
-    enabled = false
+    enabled = true
   }
 }
 
