Add feature switch for prod routes

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -204,6 +204,7 @@ feature-switch {
   #Switch between refactored packages or legacy packages
   refactor {
     enabled = true
+    prod.enabled = false
   }
 }
 
