[MTDSA-6309] remove custom filters

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -56,6 +56,9 @@ play.modules.enabled += "uk.gov.hmrc.play.bootstrap.MicroserviceModule"
 
 play.http.filters=v1.filters.VatApiFilters
 
+play.http.filters = "uk.gov.hmrc.play.bootstrap.filters.MicroserviceFilters"
+
+
 #Cant use `utils.ErrorHandler` until the VAT API is re-spec'ed to remove default Play! errors
 play.http.errorHandler = "utils.ErrorHandler"
 
