Renamed error handler

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -59,8 +59,8 @@ play.http.filters=v1.filters.VatApiFilters
 play.http.filters = "uk.gov.hmrc.play.bootstrap.filters.MicroserviceFilters"
 
 
-#Cant use `utils.ErrorHandler` until the VAT API is re-spec'ed to remove default Play! errors
-play.http.errorHandler = "utils.ErrorHandler"
+#Cant use `utils.LegacyErrorHandler` until the VAT API is re-spec'ed to remove default Play! errors
+play.http.errorHandler = "utils.LegacyErrorHandler"
 
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuthModule"
