[MTDSA-7467] add retrying components and add to NRS journey (#831)
* [MTDSA-7467] add retry components

* [MTDSA-7467] fix ITs

* [MTDSA-7467] improve error logging

* [MTDSA-7467] remove imports

* [MTDAS-7467] set auditing to enabled

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -58,14 +58,12 @@ play.http.filters=v1.filters.VatApiFilters
 
 play.http.filters = "uk.gov.hmrc.play.bootstrap.filters.MicroserviceFilters"
 
-
-#Cant use `utils.LegacyErrorHandler` until the VAT API is re-spec'ed to remove default Play! errors
-play.http.errorHandler = "utils.LegacyErrorHandler"
-
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuthModule"
 play.modules.enabled += "config.DIModule"
 
+#Cant use `utils.LegacyErrorHandler` until the VAT API is re-spec'ed to remove default Play! errors
+play.http.errorHandler = "utils.LegacyErrorHandler"
 
 
 wiremock-port = 22222
@@ -78,7 +76,7 @@ metrics {
   durationUnit = SECONDS
   showSamples = true
   jvm = true
-  enabled = false
+  enabled = true
 }
 
 auditing {
@@ -171,7 +169,8 @@ microservice {
     non-repudiation {
       host = localhost
       port = 9768
-      maxTimeout = 5000
+      numberOfRetries = 3
+      initialDelay = 500 milliseconds
     }
   }
 }
