--- a/conf/application.conf
+++ b/conf/application.conf
@@ -56,8 +56,6 @@ play.modules.enabled += "uk.gov.hmrc.play.bootstrap.backend.BackendModule"
 
 play.http.filters=v1.filters.VatApiFilters
 
-play.http.filters = "uk.gov.hmrc.play.bootstrap.backend.filters.BackendFilters"
-
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuthModule"
 play.modules.enabled += "config.DIModule"
@@ -160,10 +158,11 @@ microservice {
     }
 
     des {
-      host = localhost
+      host = 127.0.0.1
       port = 9668
       env = none
       token = secret
+      environmentHeaders = ["Accept", "Gov-Test-Scenario", "Content-Type", "Location", "X-Request-Timestamp", "X-Session-Id"]
     }
 
     non-repudiation {
@@ -224,4 +223,3 @@ controllers {
     needsAuth = false
   }
 }
-
