[DL-7888] add penalties connector

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -169,6 +169,11 @@ microservice {
       numberOfRetries = 10
       initialDelay = 500 milliseconds
     }
+
+    penalties {
+      host = localhost
+      port = 7780
+    }
   }
 }
 
