DL-8341 - added feature switch to remove financial deatils and feature toggle support for tests

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -184,6 +184,10 @@ feature-switch {
     enabled = true
   }
 
+  version-2 {
+     enabled = false
+   }
+
   auth {
     enabled = true
   }
@@ -195,6 +199,10 @@ feature-switch {
   penaltiesEndpoints {
     enabled = true
   }
+
+  financialDataRamlFeature {
+      enabled = true
+    }
 }
 
 controllers {
