add OAS yaml file

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -61,6 +61,11 @@ play.modules.enabled += "config.DIModule"
 #Cant use `utils.LegacyErrorHandler` until the VAT API is re-spec'ed to remove default Play! errors
 play.http.errorHandler = "utils.LegacyErrorHandler"
 
+# CORS Filter
+play.filters.enabled += "play.filters.cors.CORSFilter"
+play.filters.cors {
+  allowedOrigins = ["http://localhost:9680"]
+}
 
 wiremock-port = 22222
 wiremock-port = ${?WIREMOCK_PORT}
